--- a/client/app/user/partials/consult_wf_appt.html
+++ b/client/app/user/partials/consult_wf_appt.html
@@ -1,25 +1,29 @@
 
 		
-<div class="col-lg-6">
-    <!-- <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;"> -->
-    <h3>Step 1: Appointment</h3>
-    <p/>
-    <p>Select your preferred appointment time-window, and provide short information</p>
+<div>
+    <h3>Appointment</h3>
+    <strong><a href="#">Status - {{wf.apptWF.apptStatus | cwfFilter:'appt'}}</a> on {{wf.apptWF.confirmedTS | date:'MMM d, y h:mm:ss a'}} </strong>
+    
     <div>
-        <form>
+        <form class="form-inline">
             <div class="form-group">
-                <label for="exampleApptTS">Appointment Time</label>
-                <div class="row">
-                    <div class="col-xs-6">
-                        <input type="text" class="form-control" id="exampleApptTS" ng-model="wf.apptWF.requestedTS" placeholder="Select Appointment Day/Time from Calendar"/>
-                    </div>
-                    <div class="col-xs-4">
-                        <button type="button" class="btn btn-primary btn-sm btn-sm" data-toggle="modal" data-target="#myModal">
-                          Select available time-window
-                        </button>
-                    </div>
+                <label class="control-label"><i class="fa fa-calendar"></i>Want to reschedule?</label><br>
+                <div class="form-group">
+                  <input type="text" class="form-control" ng-model="wf.requestedTS" data-autoclose="1" 
+                  data-min-date="today" placeholder="Date" bs-datepicker>
                 </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" ng-model="wf.requestedTS" data-autoclose="1" 
+                  placeholder="Time" bs-timepicker>
+                </div>
+                <button type="submit" class="btn btn-primary">Reschedule</button>
             </div>
+        </form>
+    </div>
+    
+    <div>
+        <h3>Patient Information</h3>
+        <form> 
             <div class="form-group">
                 <label for="exampleInputName">Name</label>
                 <input type="text" class="form-control" id="exampleInputName" ng-model="wf.patientDetailsWF.patientName" placeholder="Enter Your Name">
@@ -42,39 +46,15 @@
                     </div>
                 
             </div>
-            <!-- <div class="form-group radio">
-                <label>
-                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
-                Male
-                </label>
-                <label>
-                <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-                Female
-                </label>
-            </div> -->
+
             <div class="form-group">
                 <label for="problemDesc">Describe your problem</label>
                 <textarea class="form-control" id="problemDesc" rows="4" ng-model="wf.patientDetailsWF.answerText[0]" ></textarea>
             </div>
 
             <!-- <button type="submit" class="btn btn-primary" ng-click="gotoPayment()">Pay Rs. 200</button> -->
-            <a class="btn btn-primary" ng-click="requestAppt()">Save</a>
+            <a class="btn btn-primary" ng-click="saveCwfState()">Save</a>
         </form>
-        <!-- 
-        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-          <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-              <div class="modal-body">
-                <h3>Click on the available time slot</h3>
-                <div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-              </div>
-            </div>
-          </div>
-        </div> -->
 
     </div>
 </div>
