main landing page changes

--- a/client/app/user/partials/consult_wf.html
+++ b/client/app/user/partials/consult_wf.html
@@ -11,13 +11,11 @@
 		  <li role="presentation"><a href="#"><span class="glyphicon glyphicon-comment" aria-hidden="true">Feedback</span></a></li>
 		</ul>
 	</div>
-	<div class="row">
+	<!-- <div class="row">
 		<div class="col-sm-2">
 			<img class="img-circle" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mM4+p/hLQAHAwKyxcxsuwAAAABJRU5ErkJggg==" alt="Generic placeholder image" style="width: 30px; height: 30px;">
 			<span>Appointment</span>
-			<ul>
-				<li>Requested</li>
-				<li>Confirmed</li>
+			
 		</div>
 		<div class="col-sm-2">
 			<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 30px; height: 30px;">
@@ -39,7 +37,7 @@
 			<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 30px; height: 30px;">
 			<span>Feedback</span>
 		</div>
-	</div>
+	</div> -->
 	<hr class="featurette-divider">
 	<div class="row">
 		<div class="col-lg-3">
