--- a/client/app/user/partials/help.html
+++ b/client/app/user/partials/help.html
@@ -1,47 +1,25 @@
-<!-- Jumbotron -->
-          <div class="jumbotron">
-              <h1>Help</h1>
-              <p class="lead">Search by Name, Place, Available Time</p>
-              <!-- <p><a class="btn btn-lg btn-success" href="provider/provider_index.html" role="button">Coming Soon</a>
-              </p> -->
-              <div class="panel panel-primary">
-                <div class="panel-heading">
-                  <h3 class="panel-title">Dr. Srinivas Murthy</h3>
-                </div>
-                <div class="panel-body">
-                  Today at 12.15 pm
-                </div>
-              </div>
-          </div>
+<div>
+  <div class="list-group">
+    <a href="#" class="list-group-item">
+      <h4 class="list-group-item-heading">1. How does ERemedy select doctors?</h4>
+      <p class="list-group-item-text">By stringent process...</p>
+    </a>
+    
+  </div>
+  <div class="list-group">
+    
+    <a href="#" class="list-group-item">
+      <h4 class="list-group-item-heading">2. What is the typical response time from doctors?</h4>
+      <p class="list-group-item-text">Advise - 24 hours</p>
+    </a>
+    
+  </div>
+  <div class="list-group">
+    
+    <a href="#" class="list-group-item">
+      <h4 class="list-group-item-heading">3. How much it will cost?</h4>
+      <p class="list-group-item-text">It depends on the doctor and the service. Generally between INR 200 and INR 500</p>
+    </a>
 
-          <!-- Example row of columns -->
-          <div class="row">
-
-              <div class="col-lg-4">
-                  <h2>Last Appointments</h2>
-                  <p>Nothing to install. Just works out-of-box from all devices you
-                    already use. Works from your laptop, desktop, iPad and Android devices.
-                  </p>
-                  <p> Find patient information before you begin consulting. Save prescriptions and patient history. </p>
-                  <p><a class="btn btn-primary" href="provider/provider_index.html" role="button">View details &raquo;</a>
-                  </p>
-              </div>
-              <div class="col-lg-4">
-                  <h2>Make New Appointment</h2>
-                  <p>Call when you are free. At the appointment time, patient would be waiting but they
-                    cannot make call to you. You will make call to them when you are ready. Of course,
-                    please honor the appointment time as much as you can.</p>
-                  <p><a class="btn btn-primary" href="provider/provider_index.html" role="button">View details &raquo;</a>
-                  </p>
-              </div>
-              <div class="col-lg-4">
-                  <h2>Find Doctors</h2>
-                  <p class="text-danger">Much better than Skype</p>
-                  <p>See your patients from anywhere. Patients too would like to see doctors from anywhere.
-                    Patients will not need somebody to accompany them</p>
-                  <p><a class="btn btn-primary" href="provider/provider_index.html" role="button">View details &raquo;</a>
-                  </p>
-              </div>
-              
-              
-          </div>
+  </div>
+</div>
