--- a/client/app/user/partials/appt_request.html
+++ b/client/app/user/partials/appt_request.html
@@ -1,13 +1,11 @@
 <div class="container" ng-controller="ApptCtrl">
 	<h1> <span class="text-muted">New Consultation with </span> <a ui-sref="doc_profile({docId:{{providerId}}})">{{provider.name}}</a> </h1>
 	<hr class="featurette-divider">
-	<div class="row">
+	<!-- <div class="row">
 		<div class="col-sm-2">
 			<img class="img-circle" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mM4+p/hLQAHAwKyxcxsuwAAAABJRU5ErkJggg==" alt="Generic placeholder image" style="width: 30px; height: 30px;">
 			<span>Appointment</span>
-			<ul>
-				<li>Requested</li>
-				<li>Confirmed</li>
+			
 		</div>
 		<div class="col-sm-2">
 			<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 30px; height: 30px;">
@@ -29,6 +27,16 @@
 			<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 30px; height: 30px;">
 			<span>Feedback</span>
 		</div>
+	</div> -->
+	<div class="row">
+		<ul class="nav nav-pills">
+		  <li role="presentation" class="active"><a ui-sref="consult_wf.appt({ cref: wf._id })"><span class="glyphicon glyphicon-tag" aria-hidden="true">Appt</span></a></li>
+		  <li role="presentation"><span class="glyphicon glyphicon-eur" aria-hidden="true">Payment</span></li>
+		  <li role="presentation"><span class="glyphicon glyphicon-tasks" aria-hidden="true">Questions</span></li>
+		  <li role="presentation"><span class="glyphicon glyphicon-headphones" aria-hidden="true">Meeting</span></li>
+		  <li role="presentation"><span class="glyphicon glyphicon-th-list" aria-hidden="true">Prescription</span></li>
+		  <li role="presentation"><span class="glyphicon glyphicon-comment" aria-hidden="true">Feedback</span></li>
+		</ul>
 	</div>
 	<hr class="featurette-divider">
 	<div class="row">
