--- a/client/app/user/partials/doctor_profile.html
+++ b/client/app/user/partials/doctor_profile.html
@@ -6,7 +6,8 @@
 	<hr class="visual-profile">
 	<div class="row">
         <div class="col-md-5">
-            <img class="featurette-image img-responsive" my-holder="holder.js/300x200/auto" alt="Generic placeholder image">
+            <img class="featurette-image img-responsive" src="/img/doc_profile_default2.png" alt="Generic placeholder image">
+            <!-- <img class="featurette-image img-responsive" my-holder="holder.js/300x200/auto" alt="Generic placeholder image"> -->
         </div>
         <div class="col-md-7">
             <div>
@@ -16,9 +17,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4"><a href="#">Rating</a></div>
+                <!-- <div class="col-lg-4"><a href="#">Rating</a></div>
                 <div class="col-lg-4"><a href="#">Reviews <span class="badge">6</span></a></div>
-                <div class="col-lg-4"><a ng-if="userIsProvider===false" ng-click="beginWF()" class=" btn btn-primary">Begin Appointment</a></div>
+                <div class="col-lg-4"><a ng-if="userIsProvider===false" ng-click="beginWF()" class=" btn btn-primary">Begin Appointment</a></div> -->
+                <a ng-if="userIsProvider===false" ng-click="beginWF()" class=" btn btn-primary">Begin Appointment</a></div>
             </div>
             
         </div>
@@ -32,7 +34,8 @@
         <div>
             <div class="col-lg-3">
                 <h3>Location</h3>
-                <img class="img-square" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 240px; height: 140px;">
+                <img class="img-square" src="/img/doc_profile_loc_default.png" alt="Generic placeholder image" style="width: 240px; height: 140px;">
+                <!-- <img class="img-square" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 240px; height: 140px;"> -->
                 <!-- <h3>1. </h3>
                 <div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div> -->
                 <div ng-repeat="locationSnippet in provider.genLocation">
@@ -44,7 +47,8 @@
             </div>
             <div class="col-lg-3">
                 <h3>Timing</h3>
-                <img class="img-square" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 240px; height: 140px;">
+                <!-- <img class="img-square" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 240px; height: 140px;"> -->
+                <img class="img-square" src="/img/doc_profile_time_default.jpg" alt="Generic placeholder image" style="width: 240px; height: 140px;">
                 <!-- <h3>1. </h3>
                 <div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div> -->
                 
@@ -58,7 +62,9 @@
             </div>
             <div class="col-lg-3">
                 <h3>Services</h3>
-                <img class="img-square" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 240px; height: 140px;">
+                <!-- <img class="img-square" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 240px; height: 140px;"> -->
+
+                <img class="img-square" src="/img/doc_profile_services_default.png" alt="Generic placeholder image" style="width: 240px; height: 140px;">
                 <!-- <h3>1. </h3>
                 <div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div> -->
                 
@@ -72,7 +78,8 @@
             </div>
             <div class="col-lg-3">
                 <h3>Fees</h3>
-                <img class="img-square" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 240px; height: 140px;">
+                <!-- <img class="img-square" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 240px; height: 140px;"> -->
+                <img class="img-square" src="/img/doc_profile_fees_default.jpg" alt="Generic placeholder image" style="width: 240px; height: 140px;">
                 <!-- <h3>1. </h3>
                 <div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div> -->
                 
