--- a/client/app/user/partials/login.html
+++ b/client/app/user/partials/login.html
@@ -1,21 +1,29 @@
-
 <div class="row">
-  <div class="col-lg-3"/>
-  <div class="col-lg-6" ng-controller="UserMainCtrl">
-      <form ng-submit="login(givenEmail,givenPassword)">
-        <div class="form-group">
-          <label for="inputEmail">Email address</label>
-          <input type="email" class="form-control" id="inputEmail" placeholder="Enter email" ng-model="givenEmail">
+    <div class="col-lg-3" />
+    <div class="col-lg-6" ng-controller="UserMainCtrl">
+        <h2> Login/Sign-in</h2>
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">Login/Sign-in</h3>
+            </div>
+            <div class="panel-body">
+                <form ng-submit="login(givenEmail,givenPassword)">
+                    <div class="form-group">
+                        <label for="inputEmail">Email address</label>
+                        <input type="email" class="form-control" id="inputEmail" placeholder="Enter email" ng-model="givenEmail">
+                    </div>
+                    <div class="form-group">
+                        <label for="inputPassword">Password</label>
+                        <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="givenPassword">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Login</button>
+                    <p>
+                </form>
+            </div>
+            <div class="panel-footer">
+                <span> If you have not registered before, please <label><a ui-sref="register">register</a></label> before you can login </span>
+            </div>
         </div>
-        <div class="form-group">
-          <label for="inputPassword">Password</label>
-          <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="givenPassword">
-        </div>
-        
-        <button type="submit" class="btn btn-primary">Login</button>
-        <p>
-        <span> If you have not registered before, please <label><a ui-sref="register">register</a></label> before you can login </span>
-      </form>
-  </div>
-  <div class="col-lg-3"/>
+    </div>
+    <div class="col-lg-3" />
 </div>
