--- a/client/app/user/partials/help.html
+++ b/client/app/user/partials/help.html
@@ -22,4 +22,14 @@
     </a>
 
   </div>
+
+  <div class="list-group">
+    
+    <a href="#" class="list-group-item">
+      <h4 class="list-group-item-heading">4. What are payment options available?</h4>
+      <p class="list-group-item-text">You can pay either through credit card or debit card or net banking.</p>
+    </a>
+
+  </div>
+
 </div>
