--- a/client/app/user/partials/consult_wf.html
+++ b/client/app/user/partials/consult_wf.html
@@ -3,12 +3,12 @@
 	<hr class="featurette-divider">
 	<div class="row">
 		<ul class="nav nav-pills">
-		  <li role="presentation" class="active"><a ui-sref="consult_wf.appt({ cref: wf._id })"><span class="glyphicon glyphicon-tag" aria-hidden="true">Appt</span></a></li>
-		  <li role="presentation"><a ui-sref="consult_wf.payment({ cref: wf._id })"><span class="glyphicon glyphicon-eur" aria-hidden="true">Payment</span></a></li>
-		  <li role="presentation"><a ui-sref="consult_wf.questions({ cref: wf._id })"><span class="glyphicon glyphicon-tasks" aria-hidden="true">Questions</span></a></li>
-		  <li role="presentation"><a href="#"><span class="glyphicon glyphicon-headphones" aria-hidden="true">Meeting</span></a></li>
-		  <li role="presentation"><a ui-sref="consult_wf.prescription({ cref: wf._id })"><span class="glyphicon glyphicon-th-list" aria-hidden="true">Prescription</span></a></li>
-		  <li role="presentation"><a href="#"><span class="glyphicon glyphicon-comment" aria-hidden="true">Feedback</span></a></li>
+		  <li role="presentation" ui-sref-active="active"><a ui-sref="consult_wf.appt({ cref: wf._id })"><span class="glyphicon glyphicon-tag" aria-hidden="true">Appt</span></a></li>
+		  <li role="presentation" ui-sref-active="active"><a ui-sref="consult_wf.payment({ cref: wf._id })"><span class="glyphicon glyphicon-eur" aria-hidden="true">Payment</span></a></li>
+		  <li role="presentation" ui-sref-active="active"><a ui-sref="consult_wf.questions({ cref: wf._id })"><span class="glyphicon glyphicon-tasks" aria-hidden="true">Questions</span></a></li>
+		  <li role="presentation" ui-sref-active="active"><a href="#"><span class="glyphicon glyphicon-headphones" aria-hidden="true">Meeting</span></a></li>
+		  <li role="presentation" ui-sref-active="active"><a ui-sref="consult_wf.prescription({ cref: wf._id })"><span class="glyphicon glyphicon-th-list" aria-hidden="true">Prescription</span></a></li>
+		  <li role="presentation" ui-sref-active="active"><a href="#"><span class="glyphicon glyphicon-comment" aria-hidden="true">Feedback</span></a></li>
 		</ul>
 	</div>
 	<!-- <div class="row">
