filter implementations for past and future appts

--- a/client/app/user/partials/doctor_profile.html
+++ b/client/app/user/partials/doctor_profile.html
@@ -38,8 +38,8 @@
     <div class="row">
         <div>
             <div class="col-lg-3">
-                <h3>Location</h3>
-                <img class="img-square" src="/img/doc_profile_loc_default.png" alt="Generic placeholder image" style="width: 240px; height: 140px;">
+                <h3><i class="fa fa-map-signs"></i>Location</h3>
+                <!-- <img class="img-square" src="/img/doc_profile_loc_default.png" alt="Generic placeholder image" style="width: 240px; height: 140px;"> -->
                 <!-- <img class="img-square" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 240px; height: 140px;"> -->
                 <!-- <h3>1. </h3>
                 <div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div> -->
@@ -51,9 +51,9 @@
                 <p>Phone - 322-323-2222</p>
             </div>
             <div class="col-lg-3">
-                <h3>Timing</h3>
+                <h3><i class="fa fa-calendar-check-o"></i>Timing</h3>
                 <!-- <img class="img-square" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 240px; height: 140px;"> -->
-                <img class="img-square" src="/img/doc_profile_time_default.jpg" alt="Generic placeholder image" style="width: 240px; height: 140px;">
+                <!-- <img class="img-square" src="/img/doc_profile_time_default.jpg" alt="Generic placeholder image" style="width: 240px; height: 140px;"> -->
                 <!-- <h3>1. </h3>
                 <div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div> -->
                 
@@ -66,10 +66,10 @@
                 </div>
             </div>
             <div class="col-lg-3">
-                <h3>Services</h3>
+                <h3><i class="fa fa-plus-square"></i>Services</h3>
                 <!-- <img class="img-square" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 240px; height: 140px;"> -->
 
-                <img class="img-square" src="/img/doc_profile_services_default.png" alt="Generic placeholder image" style="width: 240px; height: 140px;">
+                <!-- <img class="img-square" src="/img/doc_profile_services_default.png" alt="Generic placeholder image" style="width: 240px; height: 140px;"> -->
                 <!-- <h3>1. </h3>
                 <div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div> -->
                 
@@ -82,9 +82,9 @@
                 </div>
             </div>
             <div class="col-lg-3">
-                <h3>Fees</h3>
+                <h3><i class="fa fa-usd"></i>Fees</h3>
                 <!-- <img class="img-square" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 240px; height: 140px;"> -->
-                <img class="img-square" src="/img/doc_profile_fees_default.jpg" alt="Generic placeholder image" style="width: 240px; height: 140px;">
+                <!-- <img class="img-square" src="/img/doc_profile_fees_default.jpg" alt="Generic placeholder image" style="width: 240px; height: 140px;"> -->
                 <!-- <h3>1. </h3>
                 <div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div> -->
                 
