--- a/client/app/user/partials/appt_request.html
+++ b/client/app/user/partials/appt_request.html
@@ -1,5 +1,10 @@
 <div class="container" ng-controller="ApptCtrl">
 	<h1> <span class="text-muted">New Consultation with </span> <a ui-sref="doc_profile({docId:{{providerId}}})">{{provider.name}}</a> </h1>
+	<!-- <div>
+		<div ng-repeat="timingSnippet in provider.timing">
+            <p>{{timingSnippet}}</p>
+        </div>
+    </div> -->
 	<hr class="featurette-divider">
 	<!-- <div class="row">
 		<div class="col-sm-2">
@@ -65,6 +70,9 @@
 	                    </div>
 
 	                </div> -->
+	                <div class="form-group">
+	                	<label>Doctor's Timing for reference</label>
+	                	<div>{{provider.timing}}</div>
 	                <div class="form-group">
 	                    <label class="control-label"><i class="fa fa-calendar"></i>When</label><br>
 	                    <div class="form-group">
