--- a/client/app/user/partials/userLanding.html
+++ b/client/app/user/partials/userLanding.html
@@ -6,7 +6,7 @@
                 <div class="col-xs-6">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Your Appointments</h3>
+                            <h3 class="panel-title">Your Appointments <small>as of {{lastRefreshedTS}} <!-- <i class="fa fa-refresh"></i>  Refresh --></small></h3>
                         </div>
                         <div class="panel-body">
                             <div ng-if="apptList.length>0">
