cleaned up appointment filtering and action button actions, croom view

--- a/client/app/user/partials/doctor_profile.html
+++ b/client/app/user/partials/doctor_profile.html
@@ -46,12 +46,12 @@
                 <div ng-repeat="locationSnippet in provider.genLocation">
                     <p>{{locationSnippet}}</p>
                 </div>
-                <p>Domlur, Bangalore</p>
+                <!-- <p>Domlur, Bangalore</p>
                 <p> Karnataka, India </p>
-                <p>Phone - 322-323-2222</p>
+                <p>Phone - 322-323-2222</p> -->
             </div>
             <div class="col-lg-3">
-                <h3><i class="fa fa-calendar-check-o"></i>Timing</h3>
+                <h3><i class="fa fa-calendar-check-o"></i>Timings</h3>
                 <!-- <img class="img-square" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 240px; height: 140px;"> -->
                 <!-- <img class="img-square" src="/img/doc_profile_time_default.jpg" alt="Generic placeholder image" style="width: 240px; height: 140px;"> -->
                 <!-- <h3>1. </h3>
